[gd_scene load_steps=2 format=3 uid="uid://bqxvn8yqxqxqx"]

[ext_resource type="Script" uid="uid://bjq48ak5fl8s7" path="res://scenes/main_menu.gd" id="1_0xqxq"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0xqxq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Chain Reaction"
horizontal_alignment = 1

[node name="GridSizeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Размер сетки (3-10):"
horizontal_alignment = 1

[node name="GridSizeInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "5"

[node name="PlayersLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Количество игроков (2-8):"
horizontal_alignment = 1

[node name="PlayersInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "2"

[node name="CustomBoardCheck" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Использовать кастомную доску"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Начать игру"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
